[project]
name = "mcp-ansible"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromium>=0.0.0",
    "ddgs>=9.11.4",
    "fastmcp>=3.1.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.12",
    "langchain-ollama>=1.0.1",
    "ollama>=0.6.1",
    "playwright>=1.58.0",
    "requests>=2.32.5",
    "selenium>=4.41.0",
    "torch>=2.10.0",
    "trafilatura>=2.0.0",
    "transformers>=5.3.0",
    "webdriver-manager>=4.0.2",
]
